[tool.poetry]
name = "postgres-docker-spawner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "postgres_docker_spawner"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
docker = "^6.1.3"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dockerps = "postgres_docker_spawner.cli:cli"